[package]
name = "leet_code_rust"
version = "0.1.0"
authors = ["Ilya Nixan <thenixan@gmail.com>"]
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
threadpool = "1.7.1"
num_cpus = "1.10.1"
regex = "1.2.1"
itertools = "0.8.0"
easybench = "0.1.4"

[profile.dev]
opt-level=2

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "md5_bench"
harness = false