[package]
name = "leet_code_rust"
version = "0.1.0"
authors = ["Ilya Nixan <thenixan@gmail.com>"]
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
threadpool = "1.7.1"
num_cpus = "1.11.1"
regex = "1.3.1"
itertools = "0.8.2"
easybench = "1.0.0"

[profile.dev]
opt-level=2

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "md5_bench"
harness = false